--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -10,18 +10,26 @@
                 <form [formGroup]="LoginForm" (ngSubmit)="onSubmit()">
                     <div class="email">
                         <label for="email">Email</label>
-                        <input type="text" formControlName="email" class="input-field" />
+                        <input placeholder="Enter the email" type="text" formControlName="email" class="input-field" />
                     </div>
                     <div class="password">
                         <label for="password">Password</label>
-                        <input type="password" formControlName="password" class="'input-field">
+                        <input placeholder="Enter the password" type="password" formControlName="password"
+                            class="'input-field">
                     </div>
-                    <div class="forget">Forget Password?</div>
-                    <button class="login-btn" type="submit">Login</button>
-                    <div class="register">Don't have an account?</div>
-<button style="border: none;">Sign Up</button>
-                </form>
-            </div>
+                    <button type="button" class="login-btn" type="submit">Login</button>
+                    <div class="account">
+                        <button class="forget">Forget Password?</button>
+                        <div class="ac">
+                            <div class="register">Don't have an account?</div>
+                            <button type="button" [routerLink]="['/signup']" routerLinkActive="router-link-active">Sign Up</button>
+                        </div>
+                    </div>
+                    </form>
+                    </div>
         </div>
     </div>
+</div>
+<div>
+    <p>Time left: {{minutes}}:{{seconds }}</p>
 </div>
