--- a/src/app/Pages/signup/signup.component.html
+++ b/src/app/Pages/signup/signup.component.html
@@ -3,7 +3,7 @@
         <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label  for="username">Username</label>
-                <input autocomplete=""  type="text" formControlName="username" class="form-control"
+                <input placeholder="Enter the username"  type="text" formControlName="username" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f['username'].errors }" />
                 <div *ngIf="submitted &&f['username'].errors" class="invalid-feedback">
                     <div *ngIf="f['username']required">Username is required</div>
@@ -11,14 +11,14 @@
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input autocomplete="off" autofocus type="text" formControlName="email" class="form-control"
+                <input placeholder="Enter the email" autocomplete="off" autofocus type="text" formControlName="email" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" />
                 <div *ngIf="submitted &&f['email'].errors" class="invalid-feedback">
                 </div>
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input autocomplete="" type="password" formControlName="password" class="form-control"
+                <input placeholder="Enter the password" autocomplete="" type="password" formControlName="password" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" />
                 <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
                     <div *ngIf="f['password']required">Password is required</div>
